# py-algorithm-practice

./: .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/algorithms/: array_manipulation.py  count_and_say.py  count_substrings.py  huffman_coding.py  longest_palindromic_substring.py  most_profit_assigning_work.py  most_water.py  remove_nth_node_linked_list.py  reverse_integer.py  rotate_matrix.py  traverse_tree.py  validate_parentheses.py
src/algorithms/parentheses_validation/: validate_parentheses.py
src/apis/: basic.py
tests/: conftest.py
tests/data/hackerrank/array_manipulation/: case_2.txt  case_7.txt
tests/unit/: test_array_manipulation.py  test_count_and_say.py  test_count_substrings.py  test_huffman_coding.py  test_longest_palindromic_substring.py  test_most_profit_assigning_work.py  test_most_water.py  test_parentheses_validation.py  test_remove_nth_node_linked_list.py  test_reverse_integer.py  test_rotate_matrix.py  test_traverse_tree.py
