[tool.poetry]
name = "py-algorithm-practice"
version = "0.1.0"
description = "Practicing leetcode/algorithms in python"
authors = ["Emma Bobola"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
