[tool.poetry]
name = "py-algorithm-practice"
version = "0.1.0"
description = "Practicing leetcode/algorithms in python"
authors = ["Emma Bobola"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true
aggressive = 3

